--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <header class="page-header">
   <div class="container">
     Контакты 
-      https://vk.com/6r33n
-      a.purple@yandex.ru 
+    Я<a href="https://vk.com/6r33n">ВКонтакте</a>
+    <a class="header-email" href="mailto:a.purple@yandex.ru"a.purple@yandex.ru</a>
+    <a class="header-phone" href="tel:+79520313640">+7 952 031 36 40</a>
   </div>
 </header>
 
