--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="page-header">
   <div class="container">
     Контакты 
-    Я<a href="https://vk.com/6r33n">ВКонтакте</a>
+    <a href="https://vk.com/6r33n">ВКонтакте</a>
     <a class="header-email" href="mailto:a.purple@yandex.ru"a.purple@yandex.ru</a>
     <a class="header-phone" href="tel:+79520313640">+7 952 031 36 40</a>
   </div>
