--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 
     <footer class="page-footer">
     <div class="container">
-      Контакты в подвале
+    <a class="footer-email" href="mailto:a.purple@yandex.ru"a.purple@yandex.ru</a>
+    <a class="footer-phone" href="tel:+79520313640">+7 952 031 36 40</a>
     </div>
     </footer>
   </body>
