--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="page-header">
   <div class="container">
-    <a class="header-vk" href="https://vk.com/6r33n">ВКонтакте</a>
+    <a class="header-vk" href="https://vk.com/6r33n"></a>
     <a class="header-email" href="mailto:a.purple@yandex.ru"a.purple@yandex.ru</a>
     <a class="header-phone" href="tel:+79520313640">+7 952 031 36 40</a>
   </div>
