--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <section class="intro">
     <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
+      <figure>
+  <img src="files/user.jpg" width="928" height="536" alt="Это Я">
+</figure>
       <h3>Пара слов о себе</h3>
       <p>Мне 23 года, люблю готовить сэндвичи, есть сэндвичи, запивать сэндвичи колой и попутно изучать сэнд... веб-разработку.</p>
       <h3>Чем могу быть полезен</h3>
