--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
       <figure>
-<img class="center-pic" href="files/user.JPG" alt="Это Я" width="50%" height="50%">
+<img class="center-pic" "files/user.JPG" alt="Это Я" width="50%" height="50%">
 </figure>
       <h3>Пара слов о себе</h3>
       <p>Мне 23 года, люблю готовить сэндвичи, есть сэндвичи, запивать сэндвичи колой и попутно изучать сэнд... веб-разработку.</p>
